--- a/snake.css
+++ b/snake.css
@@ -15,10 +15,9 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    display: flex;
   overflow: hidden;
   flex-direction: column;
-  justify-content: center;
+  
 }
 
 
@@ -56,11 +55,12 @@ body{
    display: flex;
   justify-content: space-between;
   align-items: center;
-    
-   border-top: 4px solid black;
    border-right:4px solid black ;
    border-left: 4px solid black;
-   border-radius: 6px;
+   border-top-right-radius: 0px;
+   border-top-left-radius: 0px;
+   border-bottom-right-radius: 6px;
+   border-bottom-left-radius: 6px;
 }
 
 
@@ -79,19 +79,31 @@ body{
 .heading{
    
     font-size:3rem;
-    color:lightslategray;
+    color:lightgoldenrodyellow;
     font-weight:30px;
-    text-decoration: underline dotted lightcyan;
+    text-decoration: underline lightcyan;
+    
 }
 .arrow{
     display:none;
 }
-.snakeSpecial{
-    background:lightgoldenrodyellow;
-}
+
 .timer{
     color:lightslategray;
-    font-size: 30px;
+    font-size: 2rem;
+}
+.wrapper1{
+    width:85vmin;
+   background:rgb(4, 27, 27); 
+   border-top: 4px solid black;
+   border-right:4px solid black ;
+   border-left: 4px solid black;
+   border-top-right-radius: 6px;
+   border-top-left-radius: 6px;
+   flex-direction: column;
+   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 @media (max-width:1280px) {
     .arrow{
@@ -106,18 +118,17 @@ body{
         border-radius:4px;
         border:2px solid black;
     }
-    .leftbut{
-        position: relative;
-  
-    }
+    
     .heading{
-        font-size: 6vmin;
+        font-size: 10vmin;
     }
     .score{
-        font-size:6vmin;
+        font-size:4vmin;
     }
     .high-score{
-        font-size:6vmin;
+        font-size:4vmin;
     }
-    
+    .timer{
+        font-size:4vmin;
+    }
 }
